# abfs

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  berlin52.txt  find_best.py  input.txt  test.bash
include/: gen.h  graph.h  input.h  minheap.h  search.h
results/: params_20250717_121843.txt
shi/: better.py  create_sequential_matrices.py  data_validator.py  star_matrix_processor.py
src/: agent.rs  gen.c  graph.rs  input.c  input.rs  lib.rs  main.c  minheap.c  search.c
tests/: test_dfs_bfs.c  test_dijkstra.c  test_min_heap.c
